<?xml version="1.0"?>
<package>
  <name>clear_rotate_recovery</name>
  <version>0.0.0</version>
  <description>A recovery behaviour that clears the costmap and then rotates the robot</description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>TODO</license>
  <url type="website">http://wiki.ros.org/clear_rotate_recovery</url>
  <author>Marcus Liebhardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>angles</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <nav_core plugin="${prefix}/plugins/clear_rotate_recovery_plugin.xml" />
  </export>
</package>